--- a/playbooks/roles/keystone/templates/wsgi-keystone.conf.j2
+++ b/playbooks/roles/keystone/templates/wsgi-keystone.conf.j2
@@ -1,6 +1,8 @@
 Listen 5000
 Listen 35357
 
+WSGIPythonHome {{ virtualenv_dir }}
+
 <VirtualHost *:5000>
     WSGIDaemonProcess keystone-public processes=5 threads=1 user=keystone display-name=%{GROUP}
     WSGIProcessGroup keystone-public
