--- a/playbooks/roles/nova/templates/nova.conf.j2
+++ b/playbooks/roles/nova/templates/nova.conf.j2
@@ -22,6 +22,8 @@ security_group_api = neutron
 linuxnet_interface_driver = nova.network.linux_net.LinuxOVSInterfaceDriver
 firewall_driver = nova.virt.firewall.NoopFirewallDriver
 
+compute_driver = libvirt.LibvirtDriver
+
 [database]
 connection = mysql://nova:{{ nova_dbpass }}@controller/nova
 
