--- a/playbooks/roles/neutron/templates/metadata_agent.ini.j2
+++ b/playbooks/roles/neutron/templates/metadata_agent.ini.j2
@@ -10,6 +10,7 @@ username = neutron
 password = {{ neutron_password }}
 
 nova_metadata_ip = controller
-metadata_proxy_shared_secret = METADATA_SECRET
+metadata_proxy_shared_secret = {{ neutron_password }}
 
 verbose = True
+log_dir = /var/log/neutron
