--- a/playbooks/roles/nova/templates/nova.conf.j2
+++ b/playbooks/roles/nova/templates/nova.conf.j2
@@ -58,3 +58,6 @@ admin_auth_url = http://controller:35357/v2.0
 admin_tenant_name = service
 admin_username = neutron
 admin_password = {{ neutron_password }}
+
+service_metadata_proxy = True
+metadata_proxy_shared_secret = {{ neutron_password }}
